Fixed IE7/8 sup height issues in footnote reference links (may slightly affect spacing/height in other browsers)

--- a/src/js/sass/footnotes.scss
+++ b/src/js/sass/footnotes.scss
@@ -19,7 +19,6 @@ $pBtmSpace: $ddBtmSpace / 2;
 		background-color: #EEE;
 		border: 1px solid #CCC;
 		padding: 0 4px 1px;
-		display: inline-block;
 	}
 	sup a.footnote-link, .wet-boew-footnotes dl dd p.footnote-return a {
 		&:hover, &:focus, &:active {
